--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<div id="container"></div>
 		<div id="info">
 			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - webgl ocean
+
+			<div class="pressStart">Press Start</div>
 		</div>
 
 		<script type="module">
@@ -89,7 +91,7 @@
 				const skyUniforms = sky.material.uniforms;
 
 				skyUniforms[ 'turbidity' ].value = 10;
-				skyUniforms[ 'rayleigh' ].value = 3;
+				skyUniforms[ 'rayleigh' ].value = 2;
 				skyUniforms[ 'mieCoefficient' ].value = 0.005;
 				skyUniforms[ 'mieDirectionalG' ].value = 0.8;
 
@@ -125,6 +127,16 @@
 
 				mesh = new THREE.Mesh( geometry, material );
 				scene.add( mesh );
+
+
+				var geometry2 = new THREE.BoxGeometry( 100, 100, 20 );
+
+				// geometry2.applyMatrix( new THREE.Matrix4().makeRotationZ( Math.PI / 4 ) );
+				// geometry2.applyMatrix( new THREE.Matrix4().makeScale( 1, 2, 1 ) );
+
+				// const mesh2 = new THREE.Mesh( geometry2, material );
+				// mesh.scale.set( 1,1, 1 );
+				// scene.add( mesh2 );
 
 				//
 
@@ -182,14 +194,22 @@
 			function render() {
 
 				const time = performance.now() * 0.001;
+				
+				mesh.position.z = Math.PI / 3 ;
+				mesh.rotation.z = Math.PI / 4 ;
+        mesh.position.y = 35;
+        // mesh.scale.x = 0.5;
 
 				// mesh.position.y = Math.sin( time ) * 20 + 5;
 				mesh.position.y = 30
-				mesh.rotation.z = 260
-				mesh.rotation.y = 80
-				mesh.rotation.x = time * 0.00001;
-				mesh.rotation.y = time * 1;
-				mesh.rotation.z = time * 0;
+				// mesh.rotation.z = 260
+				// mesh.rotation.y = 80
+				// mesh.rotation.x = time * 0.00001;
+				// mesh.rotation.y = time * 1;
+				// mesh.rotation.z = time * 0;
+
+				mesh.rotation.y = time * 0.1;
+				// mesh2.rotation.y = time * 0.1;
 
 
 
