completed basic structure. DOCs & Dat.gui = Best Friends

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js webgl - shaders - ocean</title>
+		<title>ΔΦΝ=Η</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="./assets/css/main.css">
@@ -28,7 +28,8 @@
 
 			let container, stats;
 			let camera, scene, renderer;
-			let controls, water, sun, mesh;
+			let controls, water, sun, mesh, ΔΦ, ΔΩ;
+			let Φ;
 
 			init();
 			animate();
@@ -50,7 +51,8 @@
 				scene = new THREE.Scene();
 
 				camera = new THREE.PerspectiveCamera( 55, window.innerWidth / window.innerHeight, 1, 20000 );
-				camera.position.set( 30, 30, 100 );
+				camera.position.set( 30, 100, 100 );
+				camera.view = sun;
 
 				//
 
@@ -128,12 +130,29 @@
 				mesh = new THREE.Mesh( geometry, material );
 				scene.add( mesh );
 
+				const ΔΦ01_OA1 = new THREE.ConeGeometry(30, 30, 3);
+				ΔΦ = new THREE.Mesh(ΔΦ01_OA1, material );
+				ΔΦ.position.x = 0
+				ΔΦ.position.y = 75
+				scene.add ( ΔΦ );
 
-				var geometry2 = new THREE.BoxGeometry( 100, 100, 20 );
+				const ΔΦ01_0Α2 = new THREE.ConeGeometry(30, 30, 3);
+				ΔΩ = new THREE.Mesh(ΔΦ01_0Α2, material);
+				ΔΩ.position.x = 0
+				ΔΩ.position.y = 40
+				ΔΩ.rotation.z = 3.14
+				scene.add ( ΔΩ );
 
+				const ΔΦ02_Α1 = new THREE.IcosahedronGeometry(7, 2);
+				Φ = new THREE.Mesh(ΔΦ02_Α1, material);
+				scene.add ( Φ )
+
+
+
+
+				// var geometry2 = new THREE.BoxGeometry( 100, 100, 20 );
 				// geometry2.applyMatrix( new THREE.Matrix4().makeRotationZ( Math.PI / 4 ) );
 				// geometry2.applyMatrix( new THREE.Matrix4().makeScale( 1, 2, 1 ) );
-
 				// const mesh2 = new THREE.Mesh( geometry2, material );
 				// mesh.scale.set( 1,1, 1 );
 				// scene.add( mesh2 );
@@ -152,7 +171,7 @@
 				stats = new Stats();
 				container.appendChild( stats.dom );
 
-				// GUI
+				// Toc.GUI
 
 				const gui = new GUI();
 
@@ -168,7 +187,20 @@
 				folderWater.add( waterUniforms.size, 'value', 0.1, 10, 0.1 ).name( 'size' );
 				folderWater.open();
 
-				//
+				const folderPositions = gui.addFolder( 'Positions' )
+				folderPositions.add(Φ.position, 'x').min(-200).max(200).step(0.001).name('x-position');
+				folderPositions.add(Φ.position, 'y').min(-200).max(200).step(0.001).name('y-position');
+				folderPositions.add(Φ.position, 'z').min(-200).max(200).step(0.001).name('z-position');
+				
+				const folderTransformations = gui.addFolder( 'Transformations');
+				folderTransformations.add(ΔΩ.rotation, 'x').min(-3.14).max(3.14).step(0.001).name('x-rotation');
+				folderTransformations.add(ΔΩ.rotation, 'y').min(-3.14).max(3.14).step(0.001).name('y-rotation');
+				folderTransformations.add(ΔΩ.rotation, 'z').min(-3.14).max(3.14).step(0.001).name('z-rotation');
+				
+				const folderCamera = gui.addFolder('Camera');
+				folderCamera.add(camera.position, 'x').min(-500).max(500).step(0.001).name('x-camera')
+				folderCamera.add(camera.position, 'y').min(-500).max(500).step(0.001).name('y-camera')
+				folderCamera.add(camera.position, 'z').min(-500).max(500).step(0.001).name('z-camera')
 
 				window.addEventListener( 'resize', onWindowResize );
 
@@ -178,6 +210,7 @@
 
 				camera.aspect = window.innerWidth / window.innerHeight;
 				camera.updateProjectionMatrix();
+				camera.lookAt()
 
 				renderer.setSize( window.innerWidth, window.innerHeight );
 
@@ -198,6 +231,7 @@
 				mesh.position.z = Math.PI / 3 ;
 				mesh.rotation.z = Math.PI / 4 ;
         mesh.position.y = 35;
+				mesh.position.x = 300;
         // mesh.scale.x = 0.5;
 
 				// mesh.position.y = Math.sin( time ) * 20 + 5;
@@ -211,6 +245,10 @@
 				mesh.rotation.y = time * 0.1;
 				// mesh2.rotation.y = time * 0.1;
 
+				// camera.rotation.x = time * 0.1;
+
+				ΔΦ.rotation.y = time * 1;
+				ΔΩ.rotation.y = time * 1;
 
 
 				water.material.uniforms[ 'time' ].value += 1.0 / 60.0;
