adding assets to tree

--- a/index.html
+++ b/index.html
@@ -303,6 +303,9 @@
 				// mesh2.rotation.y = time * 0.1;
 
 				// camera.rotation.x = time * 0.1;
+				mesh.position.x = Math.cos(time * 2) * 212.5
+				mesh.position.z = Math.sin(time * 2) * 212.5
+				// mesh.position.y = Math.sin(time * 2) * 112.5
 
 				ΔΦ.rotation.y = time * 15;
 				ΔΩ.rotation.y = time * 15;
