--- a/TimeReality.html
+++ b/TimeReality.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>ΔΦΝ=Η</title>
+		<title>Time Reality</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="./assets/css/main.css">
@@ -41,7 +41,8 @@
 			let controls, water, sun, mesh, ΔΦ, ΔΩ;
 			let Φ, MeshHDC_01, meshA1, goldenGearTest, goldenGearTest2 ;
 			let neoncircle;
-			let timeSphere, mesh_timeSphere_L0, mesh_Reality_A0, mesh_lightContainer_A0;
+			let timeSphere, mesh_timeSphere_L0, mesh_Reality_A0, mesh_timeSphere_L1, mesh_lightContainer_A0;
+      let mesh_timeSphere_L2, mesh_timeSphere_L3, mesh_TimeSphereHourBase_L0
 
 			const particlesGeometryA = new THREE.BufferGeometry()
 
@@ -61,6 +62,8 @@
 
 			const textureLoader = new THREE.TextureLoader();
 			// const testImg01 = textureLoader.load('./assets/img/Purple_Tech01.jpeg')
+
+      // |- Glitter_Pixels.jpeg
 			const testImg01 = textureLoader.load('./assets/img/backgrounds/Glitter_Pixels.jpeg')
 
 			const testImg02 = textureLoader.load('./assets/img/backgrounds/01_Purple_Galaxy.jpeg')
@@ -76,9 +79,11 @@
 			const neoncircle01 = textureLoader.load('./assets/img/backgrounds/InfiniteContainer.jpg')
 			
 			// TimeSphereImgs
-			const timeSphereImg_01 = textureLoader.load('./assets/img/backgrounds/hexagon02.jpg')
+			const timeSphereImg_01 = textureLoader.load('./assets/img/backgrounds/TimeTravel.png')
 
-      const realitySphereImg_01 = textureLoader.load('./assets/img/backgrounds/greyWhiteGradient_02.jpeg')
+      const realitySphereImg_01 = textureLoader.load('./assets/img/backgrounds/Grid03.png')
+
+      const realitySphereImg_02 = textureLoader.load('./assets/img/backgrounds/marbleWhite.jpg')
 		
 
 			init();
@@ -274,7 +279,7 @@
 
 				// Groups	
 				const group01_timeSphere = new THREE.Group();
-				group01_timeSphere.position.set(500, 0, 0);
+				group01_timeSphere.position.set(500, 50000, 0);
 				scene.add(group01_timeSphere);
 
         const group02_RealityContainer = new THREE.Group();
@@ -285,11 +290,58 @@
 				const geo_timeSphere_L0 = new THREE.SphereGeometry( 4500, 32, 32)
 				const mat_timeSphere_L0 = new THREE.MeshBasicMaterial({ map: timeSphereImg_01, side: THREE.DoubleSide });
 				mesh_timeSphere_L0 = new THREE.Mesh(geo_timeSphere_L0, mat_timeSphere_L0)
-				mat_timeSphere_L0.transparent =false;
+				mat_timeSphere_L0.transparent = true;
 				mat_timeSphere_L0.alphaMap = timeSphereImg_01
 				mat_timeSphere_L0.wireframe = false;
 				mesh_timeSphere_L0.position.set(0, 0, 200)
 				group01_timeSphere.add(mesh_timeSphere_L0);
+
+        // TimeSphere_Layer02_Skeleton
+				const geo_timeSphere_L1 = new THREE.SphereGeometry( 7500, 32, 32)
+				const mat_timeSphere_L1 = new THREE.MeshBasicMaterial({ map: timeSphereImg_01, side: THREE.DoubleSide });
+				mesh_timeSphere_L1 = new THREE.Mesh(geo_timeSphere_L1, mat_timeSphere_L1)
+				mat_timeSphere_L1.transparent = true;
+				mat_timeSphere_L1.alphaMap = timeSphereImg_01
+				mat_timeSphere_L1.wireframe = false;
+        mesh_timeSphere_L1.rotation.set(80, 0, 0 )
+				mesh_timeSphere_L1.position.set(0, 0, 200)
+				group01_timeSphere.add(mesh_timeSphere_L1);
+
+        // TimeSphere_layer03_Skeleton
+        const geo_timeSphere_L2 = new THREE.SphereGeometry( 10500, 32, 32)
+				const mat_timeSphere_L2 = new THREE.MeshBasicMaterial({ map: timeSphereImg_01, side: THREE.DoubleSide });
+				mesh_timeSphere_L2 = new THREE.Mesh(geo_timeSphere_L2, mat_timeSphere_L2)
+				mat_timeSphere_L2.transparent = true;
+				mat_timeSphere_L2.alphaMap = timeSphereImg_01
+				mat_timeSphere_L2.wireframe = false;
+				mesh_timeSphere_L2.position.set(0, 0, 200)
+				group01_timeSphere.add(mesh_timeSphere_L2);
+
+
+        // TimeSphere_layer03_Skeleton
+        const geo_timeSphere_L3 = new THREE.SphereGeometry( 15500, 32, 32)
+				const mat_timeSphere_L3 = new THREE.MeshBasicMaterial({ map: timeSphereImg_01, side: THREE.DoubleSide });
+				mesh_timeSphere_L3 = new THREE.Mesh(geo_timeSphere_L3, mat_timeSphere_L3)
+				mat_timeSphere_L3.transparent = true;
+				mat_timeSphere_L3.alphaMap = timeSphereImg_01
+				mat_timeSphere_L3.wireframe = false;
+				mesh_timeSphere_L3.position.set(0, 0, 200)
+				group01_timeSphere.add(mesh_timeSphere_L3);
+
+        // TimeSphereHourBase_layer00_Skeleton
+        const geo_TimeSphereHourBase_L0 = new THREE.CircleGeometry( 5000, 50 )
+				const mat_TimeSphereHourBase_L0 = new THREE.MeshBasicMaterial({ map: timeSphereImg_01, side: THREE.DoubleSide });
+				mesh_TimeSphereHourBase_L0 = new THREE.Mesh(geo_TimeSphereHourBase_L0, mat_TimeSphereHourBase_L0)
+				mat_TimeSphereHourBase_L0.transparent = true;
+				mat_TimeSphereHourBase_L0.alphaMap = timeSphereImg_01
+				mat_TimeSphereHourBase_L0.wireframe = false;
+				mesh_TimeSphereHourBase_L0.position.set(0, 1.5, 200)
+        mesh_TimeSphereHourBase_L0.rotation.x = - Math.PI * 0.5
+				group01_timeSphere.add(mesh_TimeSphereHourBase_L0);
+
+        
+
+
 
         const geo_Reality_A0 = new THREE.ConeGeometry(90000, 150000, 4)
         const mat_Reality_A0 = new THREE.MeshBasicMaterial({ 
@@ -451,10 +503,29 @@
 				// goldenGearTest.rotation.z = time * 0.5;
 				// goldenGearTest2.rotation.z = time * 0.5;
 
-        mesh_timeSphere_L0.rotation.z = time * 15;
-        mesh_timeSphere_L0.position.x = Math.cos(time * 2) * 2012.5
-				mesh_timeSphere_L0.position.z = Math.sin(time * 0.5) * 2012.5
-        mesh_timeSphere_L0.position.y = Math.sin(time * 0.1) * 10012.5
+        mesh_timeSphere_L0.rotation.x = time * 1;
+        // mesh_timeSphere_L0.position.x = Math.cos(time * 2) * 2012.5
+				// mesh_timeSphere_L0.position.z = Math.sin(time * 0.5) * 2012.5
+        // mesh_timeSphere_L0.position.y = Math.sin(time * 0.1) * 10012.5
+
+        mesh_timeSphere_L1.rotation.x = time * 0.2;
+        mesh_timeSphere_L1.rotation.y = time * 0.1;
+
+
+        mesh_timeSphere_L2.rotation.x = time * 5;
+
+        mesh_timeSphere_L3.rotation.x = time * 10;
+
+        mesh_TimeSphereHourBase_L0.rotation.z = time * 1
+
+        // Creates a bug. Figure out why this doesnt work. 
+        // group01_timeSphere.position.y = time * 5;
+
+        /**
+          * |-- The code below is how you get a flat plane. Its simple Math.
+          */
+
+
 
 				// setTimeout(() => {
         // camera.position.x = Math.cos(time * 0.1) * 1200.5
@@ -462,22 +533,24 @@
         // camera.lookAt(110, -10, -500)
     		// }, 10000)
 
-				setTimeout(() => {
-					setTimeout(() => {
-						camera.position.set(2000, 3000, 7000)
-        		camera.position.x = Math.cos(time * 0.1) * 1200.5
-        		camera.position.z = Math.sin(time * 0.1) * 1200.5
-        		camera.lookAt(110, -10, -500)
-					}, 10000) 
 
-					setTimeout(() => {
-						camera.position.set(20000, 30000, 70000)
-        		camera.position.x = Math.cos(time * 0.1) * 1200.5
-        		camera.position.z = Math.sin(time * 0.1) * 1200.5
-        		camera.lookAt(110, -10, -500)
-					}, 50000) 
+        // |- # Camera Animations
+				// setTimeout(() => {
+				// 	setTimeout(() => {
+				// 		camera.position.set(2000, 3000, 7000)
+        // 		camera.position.x = Math.cos(time * 0.1) * 1200.5
+        // 		camera.position.z = Math.sin(time * 0.1) * 1200.5
+        // 		camera.lookAt(110, -10, -500)
+				// 	}, 10000) 
 
-    		}, 5000)
+				// 	setTimeout(() => {
+				// 		camera.position.set(20000, 30000, 70000)
+        // 		camera.position.x = Math.cos(time * 0.1) * 1200.5
+        // 		camera.position.z = Math.sin(time * 0.1) * 1200.5
+        // 		camera.lookAt(110, -10, -500)
+				// 	}, 50000) 
+
+    		// }, 5000)
 
 				water.material.uniforms[ 'time' ].value += 1.0 / 60.0;
 
